Fix header on IE

--- a/assets/stylesheets/kitten/molecules/navigation/_horizontal-nav.scss
+++ b/assets/stylesheets/kitten/molecules/navigation/_horizontal-nav.scss
@@ -9,12 +9,12 @@
 /// @example html
 ///
 ///   <ul class="k-HorizontalNav" role="menubar">
-///     <li role="menuitem">
+///     <li class="k-HorizontalNav__element" role="menuitem">
 ///       <a class="k-HorizontalNav__item" href="#">
 ///         Nav link 1
 ///       </a>
 ///     </li>
-///     <li role="menuitem">
+///     <li class="k-HorizontalNav__element" role="menuitem">
 ///       <a class="k-HorizontalNav__item is-selected" href="#">
 ///         Nav link 2 (selected)
 ///       </a>
@@ -71,6 +71,10 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+  }
+
+  .k-HorizontalNav__element {
+    -ms-overflow-x: hidden;
   }
 
   .k-HorizontalNav__item {
